# sierra-y-canada

./: README.md  Untitled.ipynb  main.py  pyproject.toml
utils/: copy_images.py  remove_background.py
