[tool.poetry]
name = "sierra-y-canada"
version = "0.1.0"
description = ""
authors = ["Branskins <andresje17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
